kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-secure-nginx
  labels:
    app.kubernetes.io/name: devsecops-secure-nginx-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
