kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-secure-nginx-platform
  namespace: devsecops-secure-nginx
  labels:
    app.kubernetes.io/name: devsecops-secure-nginx-platform
spec:
  selector:
    app.kubernetes.io/name: devsecops-secure-nginx-platform
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9113
      targetPort: 9113
  type: ClusterIP
